--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
 
   awesome_notifications: ^0.9.0
   path_provider: ^2.1.2
+  font_awesome_flutter: ^10.6.0
 
 dev_dependencies:
   flutter_test:
