切換語言按鈕

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   shared_preferences: ^2.2.2
+  provider: ^5.0.0
 
   awesome_notifications: ^0.8.2
   path_provider: ^2.1.2
