flutter與原生android溝通 與android os註冊通知 與android os取消已註冊的通知 os通知返回原生 點擊通知打開app

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,5 +67,6 @@ flutter {
 }
 
 dependencies {
+    implementation 'androidx.core:core:1.6.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
