--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: ^1.16.0
   flutter_lints: ^3.0.1
   intl: ^0.18.1
   intl_utils: ^2.8.7
