--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.robot_living">
    <application
         android:label="robot_living"
@@ -18,9 +19,10 @@
               />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-                <action android:name="android.intent.action.VIEW" />
-                <action android:name="com.example.robot_living.ALARM_ACTION" />
                 <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="robotliving" android:host="notificationPage" />
@@ -31,7 +33,11 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-       <receiver android:name=".AlarmReceiver" />
+       <receiver android:name=".AlarmReceiver" android:exported="true">
+           <intent-filter>
+               <action android:name="com.example.robot_living.ALARM_ACTION"/>
+           </intent-filter>
+       </receiver>
     </application>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.SET_ALARM"/>
