--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,6 +67,8 @@ flutter {
 }
 
 dependencies {
-    implementation 'androidx.core:core:1.7.0'
+    implementation 'androidx.core:core:1.13.0'
+    implementation 'androidx.window:window:1.2.0'
+    implementation "androidx.work:work-runtime:2.9.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
