跳出的訊息有按鈕 同一個時間可以跳出多個訊息

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
                <action android:name="com.example.robot_living.ALARM_ACTION"/>
            </intent-filter>
        </receiver>
+       <receiver android:name=".ButtonActionReceiver" />
     </application>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.SET_ALARM"/>
