--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dev_dependencies:
     sdk: flutter
   test: ^1.16.0
   flutter_lints: ^3.0.1
-  intl: ^0.18.1
+  intl: 0.19.0
   intl_utils: ^2.8.7
 
 flutter:
