--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,7 @@
 org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
+KEY_ALIAS=echohole
+KEY_PASSWORD=123456
+STORE_PASSWORD=123456
+STORE_FILE=C:\\Users\\shawn\\Desktop\\android-release\\my-release-key.jks
