--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
 
   path_provider: ^2.1.2
   font_awesome_flutter: ^10.7.0
+  package_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
