--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = robot_living
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.robotLiving
+PRODUCT_BUNDLE_IDENTIFIER = name.qd.robotLiving
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 name.qd. All rights reserved.
