--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,19 +5,22 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+2
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=3.3.0 <4.0.0'
+  # 20240629 current env
+  # sdk 3.4.3
+  # flutter 3.22.2
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:
+  flutter_localizations: # sdk: '>=2.12.0 <4.0.0' flutter: '>=1.12.13'
     sdk: flutter
-  shared_preferences: ^2.2.2
-  provider: ^6.1.2
+  shared_preferences: ^2.2.2 # sdk: ^3.2.0  flutter: ">=3.16.0"
 
-  path_provider: ^2.1.2
-  font_awesome_flutter: ^10.7.0
-  package_info_plus: ^8.0.0
+  provider: ^6.1.2 # sdk: ">=2.12.0 <4.0.0" flutter: ">=1.16.0"
+  path_provider: ^2.1.3 # sdk: ^3.2.0 flutter: ">=3.16.0"
+  font_awesome_flutter: ^10.7.0 # sdk: ">=3.0.0 <4.0.0"
+  package_info_plus: ^8.0.0 # sdk: ">=3.3.0 <4.0.0" flutter: ">=3.19.0"
 
 dev_dependencies:
   flutter_test:
