--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   flutter_localizations: # sdk: '>=2.12.0 <4.0.0' flutter: '>=1.12.13'
     sdk: flutter
   shared_preferences: ^2.2.2 # sdk: ^3.2.0  flutter: ">=3.16.0"
-
+  device_info_plus: ^10.1.0  # sdk: ">=3.3.0 <4.0.0" flutter: ">=3.3.0"
+  android_intent_plus: ^5.0.2  # sdk: ">=2.18.0 <4.0.0" flutter: ">=3.3.0"
+  permission_handler: ^11.3.1  # sdk: ">=2.15.0 <4.0.0" flutter: ">=2.8.0"
   provider: ^6.1.2 # sdk: ">=2.12.0 <4.0.0" flutter: ">=1.16.0"
   path_provider: ^2.1.3 # sdk: ^3.2.0 flutter: ">=3.16.0"
   font_awesome_flutter: ^10.7.0 # sdk: ">=3.0.0 <4.0.0"
