--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="name.qd.robot_living">
-   <application
+
+    <application
         android:label="robot_living"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
         <activity
             android:name="robot_living.MainActivity"
             android:exported="true"
@@ -14,9 +16,8 @@
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize">
             <meta-data
-              android:name="io.flutter.embedding.android.NormalTheme"
-              android:resource="@style/NormalTheme"
-              />
+                android:name="io.flutter.embedding.android.NormalTheme"
+                android:resource="@style/NormalTheme"/>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -28,18 +29,23 @@
                 <data android:scheme="robotliving" android:host="notificationPage" />
             </intent-filter>
         </activity>
+
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-       <receiver android:name="robot_living.AlarmReceiver" android:exported="true">
-           <intent-filter>
-               <action android:name="name.qd.robot_living.ALARM_ACTION"/>
-           </intent-filter>
-       </receiver>
+
+        <receiver android:name="robot_living.AlarmReceiver" android:exported="true">
+            <intent-filter>
+                <action android:name="name.qd.robot_living.ALARM_ACTION"/>
+            </intent-filter>
+        </receiver>
+
     </application>
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
+    <!-- Permissions -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" tools:ignore="UnusedAttribute"/>
     <uses-permission android:name="android.permission.SET_ALARM"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
