--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             android:name="flutterEmbedding"
             android:value="2" />
 
-        <receiver android:name="robot_living.AlarmReceiver" android:exported="true">
+        <receiver android:name="robot_living.AlarmReceiver" android:exported="false">
             <intent-filter>
                 <action android:name="name.qd.robot_living.ALARM_ACTION"/>
             </intent-filter>
@@ -45,8 +45,8 @@
     </application>
 
     <!-- Permissions -->
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" tools:ignore="UnusedAttribute"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.SET_ALARM"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
 </manifest>
